@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.656 2006/06/25 02:28:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.657 2006/06/25 22:24:28 codeman Exp $
+
+  25 Jun 2006; Preston Cody <codeman@gentoo.org>
+  src/GLIGenDialog.py
+  adding code to auto-add doscsi if a scsi drive detected.
+  this code is also in the gtkfe already
 
   24 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
